platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam02-volume_cube/runtime/traces/bundle-audit.exams-exam02-volume_cube/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam02-volume_cube/runtime/workspaces/bundle-audit.exams-exam02-volume_cube/submission/volume_cube.c: In function 'volume_cube':
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/reference_bundle_audit/latest/repository_root/runtime/cache/bundle_audit/exams-exam02-volume_cube/runtime/workspaces/bundle-audit.exams-exam02-volume_cube/submission/volume_cube.c:2:23: error: expected ';' before '}' token
    2 |     return (a * a * a)
      |                       ^
      |                       ;
    3 | }
      | ~                      
